# yolo_ws

./: .gitignore  README.md  TASKLIST_PHASE1.md
config/: README.md  camera_config.yaml  system_config.yaml
docs/: CAMERA_GIGE_SETUP.md  CHANGELOG_20251008.md  CRSF_Protocol_Reference.md  ENVIRONMENT_SETUP.md  H750_Development_V2.md  HIKVISION_SDK_MIGRATION.md  Jetson_Development.md  PHASE1_DEVELOPMENT_PLAN.md  PHASE1_SUMMARY_AND_ROADMAP.md  Quick_Start_Guide.md  System_Architecture_V2.md  jetson_comm_integration.md
scripts/: README.md  benchmark.py  build_engine.py  camera_server.py  camera_server_supervisor.conf  e2e_hikvision_benchmark.py  export_onnx.py  model_tools_gui.py  start_hikvision_system.sh  test_camera.py  test_camera_detection.py  test_config.py  test_logger.py  test_serial.py
src/: README.md  main.py
src/algorithms/: CMakeLists.txt  README.md  __init__.py
src/algorithms/include/: coordinate.hpp  detector.hpp
src/algorithms/src/: bindings.cpp  coordinate.cpp  detector.cpp
src/serial_comm/: README.md  __init__.py  communicator.py  protocol.py
src/utils/: README.md  __init__.py  config.py  logger.py  network.py  profiler.py
src/vision/: README.md  __init__.py  camera.py  hikvision.py  hikvision_proxy.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_integration.py  test_logger_module.py  test_serial_protocol.py  test_utils.py
